--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "pinia": "^2.1.7",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
