--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,10 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-  "express-status-monitor": "^1.2.11",
     "express": "^5.1.0",
+    "express-status-monitor": "^1.2.11",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.15.3",
     "sequelize": "^6.37.7"
   }
