--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,6 +10,10 @@ RUN npm ci
 # Copy source
 COPY . .
 
+# Build-time API URL (used by Vite) – include /api prefix
+ARG VITE_API_URL=http://localhost:3000/api
+ENV VITE_API_URL=${VITE_API_URL}
+
 # Build with Vite (npm script usually "build": "vite build")
 RUN npm run build
 
@@ -22,8 +26,8 @@ RUN rm -rf /usr/share/nginx/html/*
 # Copy Vite build output (dist/)
 COPY --from=build /usr/src/app/dist /usr/share/nginx/html
 
-# (Optional) history mode for Vue Router
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
+# History mode for Vue Router (fallback to index.html)
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
