--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.15.3",
+    "nodemailer": "^7.0.11",
     "sequelize": "^6.37.7"
   }
 }
